--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-input-autosize": "^2.2.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.33.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
