--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3.2.6"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-input-autosize": "^2.2.1",
